Atualização da Logo

--- a/index.html
+++ b/index.html
@@ -8,12 +8,9 @@
      <meta name="description" content="Criador de QR-Code gratuíto">
   </head>
   <body>
-   <!-- <div class="img">
-    <img src="img/logo-8code.png">
-    </div> -->
-
     <div class="wrapper">
       <header>
+        <img src="img/logo-8code.png">
         <h1>Gerador de QR-Code</h1>
         <p>Cole um URL ou digite um texto para criar o seu QR-Code</p>
       </header>
@@ -30,4 +27,5 @@
     </div>
     <script src="script.js"></script>
   </body>
+  <footer><p></p>8code.dev</footer>
 </html>
